# sessions

./: .prettierrc  404.html  README.md  environment.yml  index.html  index.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
01-Introduction/: index.html  index.md
01-Introduction/1-data-is-eating-the-world/: index.html
01-Introduction/2-what-is-AI/: index.html
01-Introduction/3-state-of-the-art-in-AI/: index.html
01-Introduction/4-bottlenecks-for-AI/: index.html
02-Big-data/: index.html
02-Big-data/1-context/: index.html
02-Big-data/2-data-processing-history/: index.html
02-Big-data/3-storing-data-at-scale/: index.html
02-Big-data/4-transforming-data-at-scale/: index.html
02-Data-engineering/: index.html
03-Big-data/: index.html  index.md
03-Data-engineering/: index.html
04-Data-visualization/: index.html  index.md
05-Regression/: index.html
06-Classification/: index.html  index.md
07-Models-panorama/: index.html  index.md
08-Model-selection/: index.html
09-Neural-networks/: index.html  index.md
10-Inference-principles/: index.html
10-Tutorials/: index.html  index.md
css/: style.css
docs/: 01-intro.md  style.css
docs/01-intro/: index.md  (+4 more)
notebooks/: 1_data_engineering.ipynb  1_data_engineering.py  1_data_engineering_students.ipynb  1_data_engineering_students.py  2_exploratory_data_analysis.ipynb  2_exploratory_data_analysis.py  2_exploratory_data_analysis_students.ipynb  2_exploratory_data_analysis_students.py  README.md  makefile  requirements.in  requirements.txt
search/: search_index.json
theme/: main.html
(+135 files in other folders)
