[tool.poetry]
name = "sessions"
version = "0.1.0"
description = ""
authors = ["qchenevier <24975491+qchenevier@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"
mkdocs-charts-plugin = "^0.0.8"
ipykernel = "^6.17.1"
ipython = "^8.6.0"
notebook = "^6.5.2"
black = "^22.10.0"
flake8 = "^5.0.4"
pandas = "^1.5.1"
numpy = "^1.23.5"
pyarrow = "^10.0.0"
scikit-learn = "^1.1.3"
seaborn = "^0.12.1"
matplotlib = "^3.6.2"
plotly = "^5.11.0"
altair = "^4.2.0"
nb-js-diagrammers = "^0.0.7"
duckdb = "^0.6.0"
jupytext = "^1.14.1"
mkdocs-tooltips = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
